--- a/index.html
+++ b/index.html
@@ -187,6 +187,14 @@
         </div>
       </div>
 
+        <!-- 防御側HPバー表示領域 -->
+        <div id="defenderHpArea" style="grid-column: 2 / 3; grid-row: 2 / 3; display:none; align-items:center; flex-direction:column; justify-content:center;">
+          <div id="defenderHpBarWrap" style="width:100px; height:16px; background:#eee; border-radius:8px; overflow:hidden; margin-bottom:4px;">
+            <div id="defenderHpBar" style="height:100%; background:#4caf50; width:100%; transition:width 0.3s;"></div>
+          </div>
+          <div id="defenderHpText" style="font-size:13px; text-align:center;"></div>
+        </div>
+
       <div class="arrow-layer" aria-hidden="true">
         <svg class="arrow-svg" id="arrowSvg">
           <defs>
